# customer-churn-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  train.yml
config/: config.yaml
great_expectations/expectations/: telco_expectation_suite.json
notebooks/: eda.ipynb  modeling.ipynb  shap_explainability.ipynb
scripts/: evaluate.py  predict.py  save_ge_suite.py  train.py
src/customer_churn_ml/: __init__.py
src/customer_churn_ml/app/: explain.py  main.py  recommendations.py  schemas.py
src/customer_churn_ml/data/: __init__.py  ingestion.py  preprocess.py  validation.py
src/customer_churn_ml/features/: build_features.py
src/customer_churn_ml/models/: __init__.py  evaluate.py  predict.py  train.py  tune.py
src/customer_churn_ml/serving/: __init__.py
src/customer_churn_ml/utils/: config.py  logger.py  metrics.py
tests/: test_api.py  test_ingestion.py  test_preprocess.py  test_recommendations.py
