[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-ml"
version = "0.1.0"
description = "Customer churn prediction ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "mlflow",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "joblib",
    "great-expectations",
    "shap>=0.45.0",
    "numba>=0.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]
notebook = [
    "lightgbm>=4.0,<5.0",
    "xgboost>=2.0,<3.0",
    "optuna>=3.0,<4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff.lint]
ignore = ["E402"]  # Module level import not at top — intentional for sys.path.insert pattern
